# ychat

ychat/: Makefile  Makefile.in  README  README.txt  TOOL.cpp  TOOL.h  base.cpp  base.h  chat.cpp  chat.h  conf.cpp  conf.txt  configure  configure.in  data.h  dltest.cpp  glob.h  hmap.cpp  hmap.h  html.cpp  logd.cpp  main.cpp  modl.cpp  msgs.h  name.h  pool.cpp  reqp.cpp  reqp.h  s_tool.cpp  s_tool.h  sess.cpp  sess.h  sman.h  sock.cpp  sock.h  thrd.cpp  todo.txt  user.cpp  user.h  yc.tgz  (+2 more)
ychat/cmnd/: yc_q.cpp
ychat/html/: index.html
ychat_advanced/: ChangeLog  Makefile  Makefile.in  README  base.cpp  base.h  chat.cpp  chat.h  cmnd.h  conf.cpp  conf.h  conf.txt  configure  configure.in  cont.cpp  cont.h  data.cpp  gcol.cpp  gcol.h  glob.h  hmap.cpp  hmap.h  html.cpp  html.h  incl.h  lang.cpp  lang.h  logd.cpp  logd.h  main.cpp  mcon.cpp  mcon.h  menu.cpp  menu.h  mman.cpp  mman.h  modl.cpp  modl.h  msgs.h  mutx.h  (+46 more)
ychat_advanced/docs/: mysql_ychat.txt
ychat_advanced/html/: colors.html  frameset.html  help.html  index.html  input.html  notfound.html  online.html  options.html  register.html  stream.html
ychat_advanced/lang/: de  de.txt  en  en.txt
ychat_advanced/mods/: Makefile  compile.sh  configure
ychat_advanced/scripts/: buildnr.pl  mergeconf.pl  nocvs.sh  noperl.sh  stats.pl
ychat_advanced/src/: Makefile.in  base.cpp  base.h  chat.cpp  chat.h  conf.cpp  configure  configure.in  data.cpp  data.h  dir.cpp  dir.h  gcol.cpp  gcol.h  glob.h  hmap.cpp  hmap.h  html.cpp  incl.h  lang.cpp  lang.h  logd.cpp  logd.h  main.cpp  mcon.cpp  mcon.h  menu.cpp  menu.h  (+27 more)
(+56 files in other folders)
