dnl Process this file with autoconf to produce a configure script.
AC_INIT(s_chat.h)
AC_INIT_AUTOMAKE(yChat, 0.2)
dnl Checks for programs.
AC_PROG_CPP
AC_PROG_CXX

dnl Checks for libraries.
dnl Replace `main' with a function in -lstdc:
AC_CHECK_LIB(dl, dlopen)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(string.h)
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl Checks for library functions.

AC_OUTPUT(Makefile)
